--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/*----------------------------- Home -----------------------*/
 body{
     background-color: beige;
 }
@@ -76,3 +77,27 @@ nav ul li a:hover::after{
 
 }
 
+
+/*----------------------------- About -----------------------*/
+#About{
+    padding: 80px 0;
+    color: black;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+
+.about-col-1 img{
+    width: 150%;
+    height: 60%;
+    border-radius: 15px;
+    padding-left: 1%;
+    margin-top: 103%;
+}
