--- a/style.css
+++ b/style.css
@@ -135,3 +135,27 @@ nav ul li a:hover::after{
     margin-left: 10%;
     margin-top: 5%;
 }
+
+/*----------------------------- Destinations -----------------------*/
+
+#destinations{
+    padding: 30px 0;
+}
+
+.sub-title-2{
+    font-size: 45px;
+    font-weight: 600;
+    color: black;
+    margin-top: 2%;
+    margin-left: 39%;
+}
+
+.wild-img{
+    width: 100%;
+    height: 50%;
+    border-radius: 25%;
+    padding-left: 1%;
+    margin-top: 2%;
+    padding: 2% 0px;
+}
+
