--- a/style.css
+++ b/style.css
@@ -139,23 +139,82 @@ nav ul li a:hover::after{
 /*----------------------------- Destinations -----------------------*/
 
 #destinations{
-    padding: 30px 0;
-}
-
-.sub-title-2{
-    font-size: 45px;
-    font-weight: 600;
+    margin-left: 0%;
+    margin-top: 2%;
     color: black;
-    margin-top: 2%;
-    margin-left: 39%;
+    flex-basis: 60%;
+    font-size: 25px;
+    font-weight: 600;
 }
 
-.wild-img{
-    width: 100%;
-    height: 50%;
-    border-radius: 25%;
-    padding-left: 1%;
-    margin-top: 2%;
-    padding: 2% 0px;
+.destinations-list {
+    display: grid;
+    grid-gap: 40px;
+    margin-top: 50px;
+    margin-left: 10%;
+    justify-items: center;
+    grid-template-columns: repeat(4, 1fr); /* Adjust columns to 4 components per row */
+    justify-self: center;
+    margin-left: 0%;
 }
 
+.destinations-list div {
+    background-color: yellow;
+    padding: 50px;
+    font-size: 13px;
+    font-weight: 300;
+    border-right: 10px;
+    transition: background 0.5s, transform 0.5s;
+    background-size: cover;
+    background-position: center;
+}
+
+.destinations-list div:nth-child(1){
+    background-image: url(assest/Gallefort.jpg);
+}
+
+.destinations-list div:nth-last-child(7){
+    background-image: url(assest/ellaRock.jpg);
+}
+
+.destinations-list div:nth-last-child(6){
+    background-image: url(assest/Ambuluwawa.jpg);
+}
+
+.destinations-list div:nth-last-child(5){
+    background-image: url(assest/arugam\ bay.jpg);
+}
+
+.destinations-list div:nth-last-child(4){
+    background-image: url(assest/Yala.webp);
+}
+
+.destinations-list div:nth-last-child(3){
+    background-image: url(assest/nine-arch-2-5.jpg);
+}
+
+.destinations-list div:nth-last-child(2){
+    background-image: url(assest/Sinharaja_Rain_Forest.jpg);
+}
+
+.destinations-list div:nth-last-child(1){
+    background-image: url(assest/Mirissa.jpg);
+}
+.destinations-list div h2 {
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+
+.destinations-list div a {
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    margin-top: 250px;
+    display: inline-block;
+}
+
+.destinations-list div:hover {
+    transform: translateY(-10px);
+    opacity: 0.5;
+}
