--- a/Pstyle.css
+++ b/Pstyle.css
@@ -20,3 +20,13 @@
     font-size: 25px;
 }
 
+.ellaRock-img{
+    background-image: url(assest/ellaRock01.jpg);
+                background-size: cover;
+                background-position: center;
+                background-repeat: no-repeat;
+                height: 100vh;
+                margin: 0;
+                padding: 0;
+}
+
