--- a/Pstyle.css
+++ b/Pstyle.css
@@ -40,3 +40,22 @@
     flex-basis: 60%;
 }
 
+/* ---------------- Arugambay Beach ---------------- */
+
+body{
+    background-image: url(assest/pexels-oleksandr-p-330260.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+}
+
+.title{
+    color: white;
+    margin-top: 5%;
+    margin-left: 5%;
+    font-size: 60px;
+    font-weight: 400;
+}
