--- a/Pstyle.css
+++ b/Pstyle.css
@@ -101,4 +101,17 @@
     margin-left: 22%;
 }
 
+/* ---------------- Sinharaja Rain Forest---------------- */
 
+.img-sinharaja{
+    margin-left: 22%;
+}
+
+.des-sinharaja{
+    margin-top: 5%;
+    font-size: 22px;
+}
+
+.Heading ul li{
+    margin-left: 20%;
+}
