Add Details Feature Done

--- a/Pstyle.css
+++ b/Pstyle.css
@@ -101,7 +101,7 @@
     margin-left: 22%;
 }
 
-/* ---------------- Sinharaja Rain Forest---------------- */
+/* ---------------- Sinharaja Rain Forest ---------------- */
 
 .img-sinharaja{
     margin-left: 22%;
@@ -114,4 +114,10 @@
 
 .Heading ul li{
     margin-left: 20%;
+}
+
+/* ---------------- Mirissa ---------------- */
+
+.img-mirissa{
+    margin-left: 22%;
 }
