--- a/css/Ambuluwawa.css
+++ b/css/Ambuluwawa.css
@@ -5,3 +5,18 @@
 .col-2{
     flex-basis: 60%;
 }
+
+.copyright{
+    width: 100%;
+    margin-top: 5%;
+    text-align: center;
+    padding: 25px 0;
+    background-color: gray;
+    opacity: 0.5;
+}
+
+.Copyrighttext{
+    color: white;
+    font-size: large;
+    font-weight: 300;
+}
