--- a/css/EllaRock.css
+++ b/css/EllaRock.css
@@ -1,5 +1,5 @@
 .ellaRock-img{
-    background-image: url(/assest/ellaRock01.jpg);
+    background-image: url(/assest/EllaRockCover.jpg);
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
