--- a/css/NineArch.css
+++ b/css/NineArch.css
@@ -16,3 +16,15 @@
     font-size: large;
     font-weight: 300;
 }
+
+p::before{
+    content: "N";
+}
+
+p::first-letter{
+    font-size: 30px;
+}
+
+p::first-line{
+    font-weight: bold;
+}
