Add Video For Destination 6

--- a/css/NineArch.css
+++ b/css/NineArch.css
@@ -1,5 +1,6 @@
 .img-nineArches{
-    margin-left: 5%;
+    margin-left: 15%;
+    height: 500px;
 }
 
 .copyright{
@@ -27,4 +28,8 @@ p::first-letter{
 
 p::first-line{
     font-weight: bold;
+}
+
+.video{
+    width: 40px;
 }
