--- a/css/NineArch.css
+++ b/css/NineArch.css
@@ -1,3 +1,23 @@
+table {
+    width: 80%;
+   border-collapse: collapse;
+   border: 2px solid;
+   margin-left: 6%;
+   margin-top: 5%;
+   font-size: large;
+}
+
+th, td {
+    padding: 8px;
+    text-align: left;
+    border-bottom: 1px solid black;
+    border-right: 1px solid
+}
+
+th {
+    background-color: lightblue;
+}
+
 .img-nineArches{
     margin-left: 15%;
     height: 500px;
