--- a/css/Home.css
+++ b/css/Home.css
@@ -10,6 +10,10 @@ body{
     padding: 0;
 }
 
+.newsfeed{
+    display: none;
+}
+
 #header{
     width: 100%;
     height: 100vh;
@@ -91,7 +95,7 @@ nav ul li a:hover::after{
 }
 
 .welcome{
-    margin-top: 28%;   
+    margin-top: 22%;   
     font-size: 20px;
     color: aliceblue;
     margin-left: 35%;
@@ -117,12 +121,11 @@ nav ul li a:hover::after{
 
 .about-col-1{
     flex-basis: 35%;
-
 }
 
 .about-col-1 img{
     width: 120%;
-    height: 102%;
+    height: 95%;
     border-radius: 15px;
     padding-left: 1%;
     margin-top: 15%;
@@ -143,6 +146,7 @@ nav ul li a:hover::after{
 
 .pharagraph{
     margin-left: 10%;
+    margin-top: 10%;
 }
 
 .points{
@@ -165,6 +169,7 @@ nav ul li a:hover::after{
     font-size: 25px;
     font-weight: 600;
 }
+
 
 .destinations-list {
     display: grid;
@@ -316,7 +321,7 @@ form input, form textarea{
 
 /*----------------------------- Add Details -----------------------*/
 
-#AddDetails{
+/* #AddDetails{
     margin-top: 1%;
     color: black;
     flex-basis: 60%;
@@ -335,24 +340,108 @@ table{
 td{
     border: 1px solid white;
     padding: 10px;
-}
+} */
 
 /*----------------------------- CSS for small screen -----------------------*/
 
-@media only screen and (max-with: 600px){
-    body{
-        background-image: url(/assest/images/homeR.jpg);
+@media (max-width:1200px){
+    html{
+        font-size: 55;
     }
 
-    .header-text{
-        margin-top: 100%;
-        font-size: 16px;
-    }
-
-    .header-text h1{
-        font-size: 30px;
+    .destinations-list{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
 }
 
+@media (max-width:991px){
+    .destinations-list{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width:768px){
+    nav ul li a{
+        display: none;
+    }
+
+    .newsfeed{
+        display: block;
+        margin-left: 70%;
+    }
+
+    .logo{
+        margin-top: 4%;
+    }
+
+    .header-text{
+        font-size: 60%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .header-text h1{
+        font-size: 350%;
+    }
+
+    .welcome{
+        font-size: 80%;
+        align-items: center;
+        margin-left: 25%;
+        margin-top: 60%;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .sub-title{
+        font-size: 180%;
+        margin-left: -2%;
+    }
+
+    .about-col-2{
+        align-items: center;
+    }
+
+    .row{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+    .about-col-1 img{
+        align-items: center;
+    }
+
+    .sub-title{
+        margin-left: 50%;
+    }
+
+    .destinations-list{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+
+}
 
 
+@media (max-width:450px){
+    html{
+        font-size: 50%;
+    }
+
+    .destinations-list{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
+}
